:bug: Fix letter-spacing for Font Awesome

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -113,3 +113,7 @@
 .text-regular:not(i) {
   font-weight: 400 !important;
 }
+
+i[class^="fa-"] {
+  letter-spacing: 0 !important;
+}
